--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
 
         <input type="button" value="Add New Video Game">
     </form>
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
