--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     <h1>Add Video Game</h1>
 
-    <div id="validation-summary">
-        <p>Errors go here...</p>
+    <div>
+        <ul id="validation-summary">
+
+        </ul>
     </div>
 
     <form>
@@ -25,9 +27,10 @@
         
         <label for="rating">Rating: </label>
         <select id="rating">
-            <option>E</option>
-            <option>T</option>
-            <option>M</option>
+            <option value="">Please choose a rating</option>
+            <option value="E">E - Everyone</option>
+            <option value="T">T - Teen</option>
+            <option value="M">M - Mature</option>
         </select>
         <br>
 
