Added error message styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <h1>Add Video Game</h1>
 
     <div>
-        <ul id="validation-summary">
-
-        </ul>
+        <ul id="validation-summary"></ul>
     </div>
 
     <form>
